# AutomatedTesting

./: README.md  main.py  pyproject.toml  setup.cfg  tox.ini
src/testcode/: mycode.py
tests/unittests/: test_mycode.py
