[metadata]
name = my_package
description = This is a package to be automatically tested
author = Markus Lang
version = 0.0.1
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires =
    numpy>1.0
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src